--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -1,5 +1,23 @@
 <html>
+<head>
+<script src="js/jquery-1.11.3.min.js"></script>
+
+</head>
 <body>
-Hello World!
+	
+	<input type="text" name="match" />
+	<input type="button" id="go" value="go" />
+    
+	<div id="result"></div> 
+    
+	<script language="javascript">
+	$("#go").click(function(){
+		var matchVal = $("input[name='match']").val();
+        alert(matchVal);
+		$.get( "/search?match=" + matchVal, function( data ) {
+		  $( "#result" ).html( data );
+		});	
+	});
+	</script>
 </body>
 </html>
